2012-03-08  Dana Jansens  <danakj@chromium.org>

        [chromium] Replace completelyContains with Region::contains()
        https://bugs.webkit.org/show_bug.cgi?id=80617

        Reviewed by James Robinson.

        * tests/CCLayerTestCommon.cpp:
        (CCLayerTestCommon):
        (CCLayerTestCommon::verifyQuadsExactlyCoverRect):
        * tests/CCLayerTestCommon.h:
        (CCLayerTestCommon):

2012-03-08  James Robinson  <jamesr@chromium.org>

        Use an explicit attribute to signal that a context prefers to use a discrete GPU
        https://bugs.webkit.org/show_bug.cgi?id=80639

        Reviewed by Stephen White.

        * src/GraphicsContext3DChromium.cpp:
        (WebCore::GraphicsContext3DPrivate::getContextAttributes):
        (WebCore::GraphicsContext3D::create):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::createCompositorGraphicsContext3D):

2012-03-08  Scott Byer  <scottbyer@chromium.org>

        Have ScrollAnimatorNone use requestAnimationFrame
        https://bugs.webkit.org/show_bug.cgi?id=78938

        Reviewed by James Robinson.

        * src/ScrollbarGroup.h:
        (WebCore):
        (WebKit::ScrollbarGroup::hostWindow):
        (ScrollbarGroup):
        * tests/ScrollAnimatorNoneTest.cpp:
        (MockScrollableArea::hostWindow):

2012-03-08  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>

        Make elements with attributes smaller by eliminating the m_element back pointer in NamedNodeMap
        https://bugs.webkit.org/show_bug.cgi?id=75069

        Reviewed by Ryosuke Niwa.

        * src/WebElement.cpp: Include NamedNodeMap.h since Element.h doesn't include it anymore.

2012-03-07  Kent Tamura  <tkent@chromium.org>

        Remove meaningless code in RenderTextControlSingleLine::preferredContentWidth()
        https://bugs.webkit.org/show_bug.cgi?id=80493

        Reviewed by Hajime Morita.

        * src/WebInputElement.cpp: